[tool.poetry]
name = "clabel"
version = "0.1.1"
description = "A utility for labeling clusters of text data."
authors = ["Peter B <5107405+pmbaumgartner@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pmbaumgartner/clabel"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.7.0"
questionary = "^1.10.0"
pandas = "^1.3.2"
Faker = "^8.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
Faker = "^8.12.1"
ipython = "^7.26.0"
mypy = "^0.910"
prompt-toolkit = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clabel = "clabel.main:main"